<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical"
    tools:context=".activites.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="sans-serif"
            android:text="@string/create_account"
            android:textColor="#00171f"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#CCB5B1B0" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:hint="@string/name_here"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/green"
            app:boxStrokeErrorColor="@color/black"
            app:endIconMode="clear_text"
            android:background="@color/white"
            app:startIconDrawable="@drawable/username_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:hint="@string/city_here"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/green"
            app:endIconMode="clear_text"
            android:background="@color/white"
            app:boxStrokeErrorColor="@color/black"
            app:startIconDrawable="@drawable/usercity_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:hint="@string/email_here"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/green"
            app:endIconMode="clear_text"
            android:background="@color/white"
            app:boxStrokeErrorColor="@color/black"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:hint="@string/password_here"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/green"
            app:boxStrokeErrorColor="@color/black"
            android:background="@color/white"
            app:startIconDrawable="@drawable/userlock_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:hint="@string/recheck_password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/green"
            app:endIconMode="password_toggle"
            android:background="@color/white"
            app:boxStrokeErrorColor="@color/black"
            app:startIconDrawable="@drawable/userlock_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recheck_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/singup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_buttons"
                android:backgroundTint="@color/green"
                android:text="@string/register"
                android:textColor="#EFEEEE" />
        </soup.neumorphism.NeumorphCardView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>